@@ -1,6 +1,9 @@
 package com.raven43.cinemaproject.service;
 
+import com.raven43.cinemaproject.exception.NoSuchUserException;
+import com.raven43.cinemaproject.exception.UserAlreadyExistException;
 import com.raven43.cinemaproject.model.domain.User;
+import com.raven43.cinemaproject.model.request.UserRegisterRequest;
 import com.raven43.cinemaproject.repo.UserRepo;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -8,7 +11,7 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.Set;
 
 @Service
 @RequiredArgsConstructor
@@ -21,12 +24,22 @@ public class UserService implements UserDetailsService {
         return userRepo.findByUsername(s);
     }
 
-    public boolean addUser(User user) {
-        if (user == null || userRepo.existsByUsername(user.getUsername())) {
-            return false;
+    public User registerNewUser(UserRegisterRequest request) {
+        User user = new User();
+        if (userRepo.existsByUsername(request.getUsername())) {
+            throw new UserAlreadyExistException();
         }
-        user.setRoles(Collections.singleton(User.Role.USER));
-        userRepo.save(user);
-        return true;
+        user.setUsername(request.getUsername());
+        user.setPassword(request.getPassword());
+        if (userRepo.count() == 0) {
+            user.setRoles(Set.of(User.Role.values()));
+        } else {
+            user.setRoles(Set.of(User.Role.USER));
+        }
+        return userRepo.save(user);
+    }
+
+    public User getUser(Long id) {
+        return userRepo.findById(id).orElseThrow(NoSuchUserException::new);
     }
 }
